--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,7 @@
         </activity>
         <service android:name=".service.ScheduledActionService"
             android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE"
             android:label="GnuCash Android Scheduler Execution Service"/>
         <service android:name=".util.BackupJob"
               android:permission="android.permission.BIND_JOB_SERVICE" />
